@@ -15,7 +15,7 @@ use List::Compare;
 use List::MoreUtils qw(none uniq lastval);
 use Scalar::Util    qw(weaken);
 
-our $VERSION = '1.78';
+our $VERSION = '1.79';
 
 my %translation = (
 	1  => 'Nähere Informationen in Kürze',
@@ -909,7 +909,7 @@ arrival/departure received by Travel::Status::DE::IRIS
 
 =head1 VERSION
 
-version 1.78
+version 1.79
 
 =head1 DESCRIPTION
 
